@@ -5,7 +5,7 @@ LABEL email="os@jetbrains.com"
 
 RUN apk --no-cache add curl fontconfig ttf-dejavu
 
-RUN curl -o jbr.jar -L https://download.jetbrains.com/biolabs/jbr_browser/jar/jbr-2.0.6782.jar
+RUN curl -o jbr.jar -L https://download.jetbrains.com/biolabs/jbr_browser/jar/jbr-2.0.6785.jar
 
 # JBR sessions should be located here
 RUN set -e && mkdir /jbr_sessions
@@ -20,7 +20,6 @@ EXPOSE 5000
 # JBR in server mode
 ENTRYPOINT exec java -Xmx3G --add-modules=jdk.incubator.vector \
      -ea -XX:+UseCompressedOops \
-     -Djdk.attach.allowAttachSelf -Djol.magicFieldOffset=true \
      -XX:+HeapDumpOnOutOfMemoryError \
      -XX:ErrorFile=/jbr_logs/jbr_java_error%p.log \
      -XX:HeapDumpPath=/jbr_logs/jbr_java_error.hprof \
